--- a/modul-3/230441100030-ROHMATUL AZLI FITRI DEVI/nbproject/project.properties
+++ b/modul-3/230441100030-ROHMATUL AZLI FITRI DEVI/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/kendaraan.jar
+dist.jar=${dist.dir}/praktikumModul3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/kendaraan
+dist.jlink.output=${dist.jlink.dir}/praktikumModul3
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=kendaraan
-main.class=kendaraan.Kendaraan
+jlink.launcher.name=praktikumModul3
+main.class=praktikummodul3.PraktikumModul3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
