--- a/modul-3/230441100003_Sunda Madu Buana/kendaraan/nbproject/project.properties
+++ b/modul-3/230441100003_Sunda Madu Buana/kendaraan/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=kendaraan
-main.class=kendaraan.Kendaraan
+main.class=kendaraan.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
